styles: fix spacing

--- a/borne/frontend/src/styles/base.css
+++ b/borne/frontend/src/styles/base.css
@@ -30,17 +30,17 @@
 
 /* Define CSS variables for spacing and radius */
 :root {
-    --spacing-xs: clamp(0.25rem, 0.5vw + 0.15rem, 0.5rem);
+    --spacing-xs: clamp(0.25rem, 0.5vw + 0.15rem, 0.75rem);
     --spacing-sm: clamp(0.5rem, 0.75vw + 0.25rem, 1rem);
-    --spacing-md: clamp(1rem, 1.5vw + 0.5rem, 2rem);
-    --spacing-lg: clamp(2rem, 3vw + 1rem, 4rem);
-    --spacing-xl: clamp(3rem, 5vw + 2rem, 6rem);
-    --spacing-xxl: clamp(6rem, 8vw + 4rem, 12rem);
+    --spacing-md: clamp(1rem, 1.5vw + 0.5rem, 1.5rem);
+    --spacing-lg: clamp(2rem, 3vw + 1rem, 2.5rem);
+    --spacing-xl: clamp(4rem, 5vw + 2rem, 4.5rem);
+    --spacing-xxl: clamp(8rem, 8vw + 4rem, 8.5rem);
 
     --radius-sm: clamp(10px, 0.5vw + 0.25rem, 24px);
     --radius-md: clamp(16px, 0.8vw + 0.4rem, 36px);
 
-    --border-size: clamp(2px, 0.2vw + 0.1rem, 2.5px);
+    --border-size: clamp(2px, 0.2vw + 0.1rem, 3px);
 }
 
 :root {
@@ -54,9 +54,9 @@ html {
     -webkit-tap-highlight-color: transparent;
 }
 
-/* * {
+* {
     cursor: none !important;
-} */
+}
 
 *,
 *::before,
